# find-subimage

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: clippy.yml  find-subimage.yml
alternative licenses/: Apache2.0  BSL1.0  Unlicense  Zlib
ci/: script.sh
examples/: subimage-finder.rs
src/: lib.rs
tests/: integration_tests.rs
